--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-4 col-lg-10 col-lg-offset-2">
-                <h1 class="text-center">WIN AN iPhone 8</h1>
+                <h1 class="text-center">WIN AN <strong>iPhone 8</strong></h1>
             </div>
         </div>
         <div class="row">
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-sm-8 col-lg-10 text-center">
                     <h2>1000's Of iPhones To Be WON TODAY</h2>
-                    <a class="btn" href="http://movfe.com/srv.html?id=547323&pub=169109">ENTER NOW</a>
+                    <a class="btn" href="http://lnkgo.com/5CvZ">ENTER NOW</a>
                 </div>
 
             </div>
